--- a/app/templates/style/style.css
+++ b/app/templates/style/style.css
@@ -1,4 +1,3 @@
-/* Reset some basic styles */
 body,
 h1,
 h2,
@@ -10,15 +9,13 @@ form {
   box-sizing: border-box;
 }
 
-/* Basic styling for the body */
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  margin: 0; /* Remove default margin */
-  padding-top: 50px; /* Ensure space for fixed button group */
+  margin: 0;
+  padding-top: 50px;
 }
 
-/* Fixed button group styling */
 .button-group {
   position: fixed;
   top: 0;
@@ -30,10 +27,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 10px 0;
-  z-index: 1000; /* Ensure it's above other content */
+  z-index: 1000;
 }
 
-/* Button styling */
 .button {
   display: inline-block;
   background-color: #007bff;
@@ -46,14 +42,13 @@ body {
   text-decoration: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin: 0 5px; /* Space between buttons */
+  margin: 0 5px;
 }
 
 .button:hover {
   background-color: #0056b3;
 }
 
-/* Container styling */
 .container {
   background: #fff;
   border-radius: 8px;
@@ -62,10 +57,9 @@ body {
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
-  margin: 20px auto; /* Adjusted for space under the fixed button group */
+  margin: 20px auto;
 }
 
-/* Form styling */
 .form_top {
   margin: 0 auto;
 }
